--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,6 @@ body{
 .todoList .todoItem{
     align-items: center;
     flex-direction: row;
-    /* background-color: #000; */
-}
-.todoList .todoCheckbox{
-    background-color: #f00;
-    border-radius: 20em;
-    border-color: #497BE8;
-    height: 200px;
 }
 .todoList li{
   position: relative;
@@ -98,6 +91,8 @@ body{
   word-wrap: break-word;
   width: 100%;
 }
+
+/* Trash can */
 .todoList li .icon{
   position: absolute;
   right: -0;
@@ -141,81 +136,6 @@ body{
   pointer-events: auto;
 }
 
-
-/* From W3Schools */
-
-/* The container */
-.checkContainer {
-  display: block;
-  position: relative;
-  margin-right: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.checkContainer input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkContainer {
-  /* position: absolute; */
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  /* background-color: #f00; */
-  /* border-radius: 16; */
-  border-color: #000;
-  /* border-width: 400; */
-  border-style: solid
-}
-
-/* On mouse-over, add a grey background color */
-/* .checkContainer:hover input ~ .checkmark {
-  background-color: #ccc;
-} */
-
-/* When the checkbox is checked, add a blue background */
-/* .checkContainer input:checked ~ .checkmark {
-  background-color: #2196F3;
-} */
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.checkContainer input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.checkContainer .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
 .todoText {
 }
 
@@ -227,11 +147,8 @@ body{
   user-select: none
 }
 
-/* Show the checkmark when checked */
-.todotext input:checked ~ .checkmark:after {
-  text-decoration: none;
-}
 
+/* Removes link styling */
 a {
   color: inherit;
   text-decoration: inherit;
